re-generare html-uri pe baza Excel-urilor

--- a/src/pages/instruments/03_csr_en.html
+++ b/src/pages/instruments/03_csr_en.html
@@ -98,7 +98,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I4a. Region</div>
                 <div>
-                    <select id="i4a" name="i4a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i4a" name="i4a" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
                 </div>
@@ -106,7 +106,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I4b. District</div>
                 <div>
-                    <select id="i4b" name="i4b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i4b" name="i4b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
                 </div>
@@ -114,7 +114,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I4c. Settlement</div>
                 <div>
-                    <select id="i4c" name="i4c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i4c" name="i4c" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
                 </div>
@@ -122,7 +122,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I4d. Type of settlement</div>
                 <div>
-                    <select id="i4d" name="i4d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i4d" name="i4d" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="10">Region</option>
                         <option value="20">District</option>
                         <option value="21">District-level city</option>
@@ -136,7 +136,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I5. Type of institution</div>
                 <div>
-                    <select id="i5" name="i5" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i5" name="i5" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="--">--</option>
                         <option value="11">11. Mehribonlik house</option>
                         <option value="12">12. Muruvat house for children with disabilities</option>
@@ -244,7 +244,7 @@
                     </div>
                     <div class="flex items-center">
                         <input id="j6-4" type="radio" value="3" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="j6-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary</label>
+                        <label for="j6-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="j6-5" type="radio" value="4" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -345,7 +345,7 @@
                     </div>
                     <div class="flex items-center">
                         <input id="e4-4" type="radio" value="3" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="e4-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary</label>
+                        <label for="e4-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="e4-5" type="radio" value="4" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
