--- a/src/pages/instruments/06_dsee_en.html
+++ b/src/pages/instruments/06_dsee_en.html
@@ -75,7 +75,7 @@
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">1 GENERAL INFORMATION ABOUT THE INSTITUTION</h2>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>I1. Name of the specialized educational institution</div>
+                <div>I1. Name of the institution</div>
                 <div>
                     <input type="text" id="i1" name="i1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -145,7 +145,7 @@
 
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">2 ENTRIES AND EXITS FROM THIS INSTITUTION BETWEEN JANUARY 1 AND DECEMBER 31 OF THE REFERENCE YEAR (2023)</h2>
             <div class="grid grid-cols-3 gap-4 items-center mt-4">
-                <div class="col-span-2">TNR0. Total number of children in this institution, on December 31, the year before the reference year (2023)</div>
+                <div class="col-span-2">TNR0. Total number of children in this institution, on December 31, the year before the reference year</div>
                 <div class="col-span-1">
                     <input type="text" id="tnr0" name="tnr0" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -212,7 +212,7 @@
                         </td>
                     </tr>
                     <tr class="border-b">
-                        <td class="p-2">NET1d. Entries children11-14 years</td>
+                        <td class="p-2">NET1d. Entries children 11-14 years</td>
                         <td class="p-2 text-center">
                             <input type="text" id="net1d_b" name="net1d_b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 p-2.5 w-24" />
                         </td>
@@ -252,8 +252,8 @@
                     </tr>
                 </tbody>
             </table>
-            <p class="mt-6 font-medium">New Entries in the child alternative care system / specialized boarding schools system</p>
-            <table class="w-full" aria-describedby="New Entries in the child alternative care system / specialized boarding schools system">
+            <p class="mt-6 font-medium">New Entries in the alternative child care system / specialized boarding schools system</p>
+            <table class="w-full" aria-describedby="New Entries in the alternative child care system / specialized boarding schools system">
                 <thead>
                     <tr class="border-b pb-1 mb-1">
                         <th class="p-2"></th>
@@ -468,7 +468,7 @@
                     <tr class="border-b">
                         <td class="p-2">
                             <small class="italic block mb-2">If YES,</small>
-                            NEX1A. Exits of children 0-2 years
+                            NEX1a. Exits of children 0-2 years
                         </td>
                         <td class="p-2 text-center">
                             <input type="text" id="nex1a_b" name="nex1a_b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 p-2.5 w-24" />
@@ -683,7 +683,7 @@
                         </td>
                     </tr>
                     <tr class="border-b">
-                        <td class="p-2">EXT3. Transfers to Muruvvat house for children with disabilities</td>
+                        <td class="p-2">EXT3. Transfers to Muruvat house for children with disabilities</td>
                         <td class="p-2 text-center">
                             <input type="text" id="ext3_b" name="ext3_b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 p-2.5 w-24" />
                         </td>
