--- a/src/pages/instruments/06_dsee_ru.html
+++ b/src/pages/instruments/06_dsee_ru.html
@@ -75,7 +75,7 @@
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">1 ОБЩАЯ ИНФОРМАЦИЯ ОБ УЧРЕЖДЕНИИ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>I1. Название специализированного учебного заведения</div>
+                <div>I1. Название заведения</div>
                 <div>
                     <input type="text" id="i1" name="i1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -145,7 +145,7 @@
 
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">2 ПОСТУПЛЕНИЯ И ВЫХОДЫ ИЗ ЭТОГО УЧРЕЖДЕНИЯ С 1 ЯНВАРЯ ПО 31 ДЕКАБРЯ отчетного года (2023)</h2>
             <div class="grid grid-cols-3 gap-4 items-center mt-4">
-                <div class="col-span-2">TNR0. Общее количество детей в данном учреждении на 31 декабря года, предшествующему отчетному году (2023)</div>
+                <div class="col-span-2">TNR0. Общее количество детей в данном учреждении на 31 декабря года, предшествующему отчетному году</div>
                 <div class="col-span-1">
                     <input type="text" id="tnr0" name="tnr0" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -468,7 +468,7 @@
                     <tr class="border-b">
                         <td class="p-2">
                             <small class="italic block mb-2">Если ДА,</small>
-                            NEX1A. Выходы детей 0-2 лет
+                            NEX1a. Выходы детей 0-2 лет
                         </td>
                         <td class="p-2 text-center">
                             <input type="text" id="nex1a_b" name="nex1a_b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 p-2.5 w-24" />
