--- a/src/pages/instruments/06_dsee_uz.html
+++ b/src/pages/instruments/06_dsee_uz.html
@@ -75,7 +75,7 @@
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">1 MUASSASA HAQIDA UMUMIY MA'LUMOT</h2>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>I1. Ixtisoslashgan ta'lim muassasasining nomi</div>
+                <div>I1. Muassasasining nomi</div>
                 <div>
                     <input type="text" id="i1" name="i1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -145,7 +145,7 @@
 
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">2 HISOBOT YILINING 1-YANVAR VA 31-DEKABR ORASIDA USHBU MUASSASAGA QABUL QILINISHI  VA CHIQISHI (2023)</h2>
             <div class="grid grid-cols-3 gap-4 items-center mt-4">
-                <div class="col-span-2">TNR0. Hisobot yilidan avvalgi yilning 31 dekabr holatida ushbu muassasadagi bolalarning umumiy soni (2023)</div>
+                <div class="col-span-2">TNR0. Hisobot yilidan avvalgi yilning 31 dekabr holatida ushbu muassasadagi bolalarning umumiy soni</div>
                 <div class="col-span-1">
                     <input type="text" id="tnr0" name="tnr0" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -468,7 +468,7 @@
                     <tr class="border-b">
                         <td class="p-2">
                             <small class="italic block mb-2">HA bo'lsa,</small>
-                            NEX1A. 0-2 yoshdagi bolalarning chiqishlari
+                            NEX1a. 0-2 yoshdagi bolalarning chiqishlari
                         </td>
                         <td class="p-2 text-center">
                             <input type="text" id="nex1a_b" name="nex1a_b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 p-2.5 w-24" />
