--- a/src/pages/instruments/07_ftch_ru.html
+++ b/src/pages/instruments/07_ftch_ru.html
@@ -276,7 +276,7 @@
                     </div>
                     <div class="flex items-center">
                         <input id="ifm6-9" type="radio" value="9" name="ifm6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ifm6-9" class="ms-2 text-sm text-gray-900">9.Безработный</label>
+                        <label for="ifm6-9" class="ms-2 text-sm text-gray-900">9. Безработный</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ifm6-10" type="radio" value="10" name="ifm6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -503,7 +503,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-4">б. дети с особыми образовательными потребностями?</div>
+                <div class="ml-4">b. дети с особыми образовательными потребностями?</div>
                 <div class="grid grid-cols-2 gap-4 items-center4">
                     <div class="flex items-center">
                         <input id="fc2b-1" type="radio" value="1" name="fc2b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -581,11 +581,11 @@
                     <tr class="border-b">
                         <th class="p-2"></th>
                         <th class="w-40 p-2">а. Пол</th>
-                        <th class="p-2">б. Возраст</th>
-                        <th class="p-2">в. Дата поступления</th>
-                        <th class="p-2">д. Имеется ли инвалидность?</th>
+                        <th class="p-2">b. Возраст</th>
+                        <th class="p-2">c. Дата поступления</th>
+                        <th class="p-2">d. Имеется ли инвалидность?</th>
                         <th class="p-2">е. Откуда поступил ребенок?</th>
-                        <th class="w-48 p-2">ф. В каком учебном заведении сейчас учится ребенок?</th>
+                        <th class="w-48 p-2">f. В каком учебном заведении сейчас учится ребенок?</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -1162,9 +1162,9 @@
                     <tr class="border-b">
                         <th class="p-2"></th>
                         <th class="w-40 p-2">а. Пол</th>
-                        <th class="p-2">б. Возраст</th>
-                        <th class="w-52 p-2">в. Имеется ли инвалидность?</th>
-                        <th class="p-2">д. Причина ухода</th>
+                        <th class="p-2">b. Возраст</th>
+                        <th class="w-52 p-2">c. Имеется ли инвалидность?</th>
+                        <th class="p-2">d. Причина ухода</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -1712,7 +1712,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-4">б. ... отказывались от ухода за детьми с инвалидностью (имеющими подтвержденную инвалидность), ВИЧ-инфицированными или больными СПИДом?</div>
+                <div class="ml-4">b. ... отказывались от ухода за детьми с инвалидностью (имеющими подтвержденную инвалидность), ВИЧ-инфицированными или больными СПИДом?</div>
                 <div class="grid grid-cols-2 gap-4 items-center4">
                     <div class="flex items-center">
                         <input id="qs5b-1" type="radio" value="1" name="qs5b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1725,7 +1725,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-4">в. ... отказывались от ухода за детьми-подростками (10+ лет) с нарушениями поведения?</div>
+                <div class="ml-4">c. ... отказывались от ухода за детьми-подростками (10+ лет) с нарушениями поведения?</div>
                 <div class="grid grid-cols-2 gap-4 items-center4">
                     <div class="flex items-center">
                         <input id="qs5c-1" type="radio" value="1" name="qs5c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1738,7 +1738,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-4">д. ... подвергались дисциплинарному расследованию или получали дисциплинарное взыскание?</div>
+                <div class="ml-4">d. ... подвергались дисциплинарному расследованию или получали дисциплинарное взыскание?</div>
                 <div class="grid grid-cols-2 gap-4 items-center4">
                     <div class="flex items-center">
                         <input id="qs5d-1" type="radio" value="1" name="qs5d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
