--- a/src/pages/instruments/08_pfq_ru.html
+++ b/src/pages/instruments/08_pfq_ru.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>IFP1b. Район</div>
+                <div>PF1b. Район</div>
                 <div>
                     <select id="pf1b" name="pf1b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
@@ -340,19 +340,19 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>IFP4a. Сколько биологических детей у приемного родителя, если таковые имеются?</div>
+                <div>PF4a. Сколько у опекуна своих  биологических детей, если есть?</div>
                 <div>
                     <input type="text" id="pf4a" name="pf4a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>IFP4b. Сколько усыновленных детей у приемного родителя, если таковые имеются?</div>
+                <div>PF4b. Сколько у опекуна приемных детей, если есть?</div>
                 <div>
                     <input type="text" id="pf4b" name="pf4b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>IFP5. Сколько из этих детей проживает в домохозяйстве?</div>
+                <div>PF5. В настоящее время сколько своих детей (биологических и усыновленных/удочеренных, если таковые имеются) проживают в домохозяйстве</div>
                 <div>
                     <input type="text" id="pf5" name="pf5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -365,12 +365,12 @@
                     <tr class="border-b">
                         <th class="p-2"></th>
                         <th class="w-40 p-2">а. Пол</th>
-                        <th class="p-2">б. Возраст</th>
-                        <th class="p-2">в. Дата поступления</th>
-                        <th class="p-2">д. Имеется ли инвалидность?</th>
+                        <th class="p-2">b. Возраст</th>
+                        <th class="p-2">c. Дата поступления</th>
+                        <th class="p-2">d. Имеется ли инвалидность?</th>
                         <th class="w-48 p-2">е. Откуда поступил ребенок?</th>
-                        <th class="p-2">ф. Ожидаемая дата выхода</th>
-                        <th class="w-44 p-2">г. В каком учебном заведении сейчас учится ребенок?</th>
+                        <th class="p-2">f. Ожидаемая дата выхода</th>
+                        <th class="w-44 p-2">g. В каком учебном заведении сейчас учится ребенок?</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -977,9 +977,9 @@
                     <tr class="border-b">
                         <th class="p-2"></th>
                         <th class="w-40 p-2">а. Пол</th>
-                        <th class="p-2">б. Возраст</th>
-                        <th class="w-52 p-2">в. Имеется ли инвалидность?</th>
-                        <th class="p-2">д. Причина ухода</th>
+                        <th class="p-2">b. Возраст</th>
+                        <th class="w-52 p-2">c. Имеется ли инвалидность?</th>
+                        <th class="p-2">d. Причина ухода</th>
                     </tr>
                 </thead>
                 <tbody>
