--- a/src/pages/instruments/08_pfq_uz.html
+++ b/src/pages/instruments/08_pfq_uz.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>IFP1b. Tuman</div>
+                <div>PF1b. Tuman</div>
                 <div>
                     <select id="pf1b" name="pf1b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
@@ -340,19 +340,19 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>IFP4a. Patronatga bola qabul qiluvchining biologik (o'z) bolasi bormi, agar bo'lsa nechta?</div>
+                <div>PF4a. Vasiyda shaxsiy biologik farzandlarining soni qancha, agar mavjud bo’lsa?</div>
                 <div>
                     <input type="text" id="pf4a" name="pf4a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>IFP4b. Patronatga bola qabul qiluvchining farzandlikka olingan bolasi bormi, bo'lsa nechta?</div>
+                <div>PF4b. Vasiyda vasiylikka olingan farzandlarining soni qancha, agar mavjud bo’lsa?</div>
                 <div>
                     <input type="text" id="pf4b" name="pf4b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>IFP5. Bu bolalarning nechtasi xonadonda yashaydi?</div>
+                <div>PF5. Hozirda patranat oilaning uy xo'jaligida nechta (biologik va asrab olingan, agar mavjud bo'lsa) farzandi yashaydi?</div>
                 <div>
                     <input type="text" id="pf5" name="pf5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
