--- a/src/pages/instruments/03_csr_ru.html
+++ b/src/pages/instruments/03_csr_ru.html
@@ -98,7 +98,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I4a. Область</div>
                 <div>
-                    <select id="i4a" name="i4a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i4a" name="i4a" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
                     </select>
                 </div>
@@ -106,7 +106,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I4b. Район</div>
                 <div>
-                    <select id="i4b" name="i4b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i4b" name="i4b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
                     </select>
                 </div>
@@ -114,7 +114,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I4c. Населённый пункт</div>
                 <div>
-                    <select id="i4c" name="i4c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i4c" name="i4c" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
                     </select>
                 </div>
@@ -122,7 +122,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I4d. Тип поселения</div>
                 <div>
-                    <select id="i4d" name="i4d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i4d" name="i4d" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="10">Oбласть</option>
                         <option value="20">Район</option>
                         <option value="21">Города областного подчинения</option>
@@ -136,7 +136,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I5. Тип учреждения</div>
                 <div>
-                    <select id="i5" name="i5" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i5" name="i5" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="--">--</option>
                         <option value="11">11. Дом «Мехрибонлик»</option>
                         <option value="12">12. Дом-интернат «Мурувват» для детей с инвалидностью</option>
@@ -244,7 +244,7 @@
                     </div>
                     <div class="flex items-center">
                         <input id="j6-4" type="radio" value="3" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="j6-4" class="ms-2 text-sm text-gray-900">3. Незаконченное среднее специальное образование</label>
+                        <label for="j6-4" class="ms-2 text-sm text-gray-900">3. Незаконченное специальное среднее/профессиональное образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="j6-5" type="radio" value="4" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -345,7 +345,7 @@
                     </div>
                     <div class="flex items-center">
                         <input id="e4-4" type="radio" value="3" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="e4-4" class="ms-2 text-sm text-gray-900">3. Незаконченное среднее специальное образование</label>
+                        <label for="e4-4" class="ms-2 text-sm text-gray-900">3. Незаконченное специальное среднее/профессиональное образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="e4-5" type="radio" value="4" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
