--- a/src/pages/instruments/04_qmr_en.html
+++ b/src/pages/instruments/04_qmr_en.html
@@ -102,7 +102,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I4a. Region</div>
                 <div>
-                    <select id="i4a" name="i4a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i4a" name="i4a" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
                 </div>
@@ -110,7 +110,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I4b. District</div>
                 <div>
-                    <select id="i4b" name="i4b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i4b" name="i4b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
                 </div>
@@ -119,7 +119,7 @@
                 <div>I4c. Settlement</div>
                 <div>
                     <select id="i4c" name="i4c"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                        class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="--" selected>--</option>
                     </select>
                 </div>
@@ -130,7 +130,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I9. Type of institution</div>
                 <div>
-                    <select id="i9" name="i9" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                    <select id="i9" name="i9" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="--" selected>--</option>
                         <option value="11">Mehribonlik house</option>
                         <option value="12">Muruvat house for children with disabilities</option>
@@ -557,7 +557,7 @@
                             <input type="text" id="af5_1_e" name="af5_1_e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-1">
-                            <select id="af5_1_g" name="af5_1_g" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                            <select id="af5_1_g" name="af5_1_g" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
                                 <option value="1">1. Fully accessible (meets all standards for physical and informational accessibility)</option>
                                 <option value="2">2. Partially accessible</option>
@@ -583,7 +583,7 @@
                             <input type="text" id="af5_2_e" name="af5_2_e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-1">
-                            <select id="af5_2_g" name="af5_2_g" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                            <select id="af5_2_g" name="af5_2_g" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
                                 <option value="1">1. Fully accessible (meets all standards for physical and informational accessibility)</option>
                                 <option value="2">2. Partially accessible</option>
@@ -609,7 +609,7 @@
                             <input type="text" id="af5_3_e" name="af5_3_e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-1">
-                            <select id="af5_3_g" name="af5_3_g" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                            <select id="af5_3_g" name="af5_3_g" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
                                 <option value="1">1. Fully accessible (meets all standards for physical and informational accessibility)</option>
                                 <option value="2">2. Partially accessible</option>
@@ -635,7 +635,7 @@
                             <input type="text" id="af5_4_e" name="af5_4_e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-1">
-                            <select id="af5_4_g" name="af5_4_g" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                            <select id="af5_4_g" name="af5_4_g" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
                                 <option value="1">1. Fully accessible (meets all standards for physical and informational accessibility)</option>
                                 <option value="2">2. Partially accessible</option>
@@ -661,7 +661,7 @@
                             <input type="text" id="af5_5_e" name="af5_5_e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-1">
-                            <select id="af5_5_g" name="af5_5_g" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                            <select id="af5_5_g" name="af5_5_g" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
                                 <option value="1">1. Fully accessible (meets all standards for physical and informational accessibility)</option>
                                 <option value="2">2. Partially accessible</option>
@@ -687,7 +687,7 @@
                             <input type="text" id="af5_6_e" name="af5_6_e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-1">
-                            <select id="af5_6_g" name="af5_6_g" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                            <select id="af5_6_g" name="af5_6_g" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
                                 <option value="1">1. Fully accessible (meets all standards for physical and informational accessibility)</option>
                                 <option value="2">2. Partially accessible</option>
@@ -713,7 +713,7 @@
                             <input type="text" id="af5_7_e" name="af5_7_e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-1">
-                            <select id="af5_7_g" name="af5_7_g" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                            <select id="af5_7_g" name="af5_7_g" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
                                 <option value="1">1. Fully accessible (meets all standards for physical and informational accessibility)</option>
                                 <option value="2">2. Partially accessible</option>
@@ -739,7 +739,7 @@
                             <input type="text" id="af5_8_e" name="af5_8_e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-1">
-                            <select id="af5_8_g" name="af5_8_g" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                            <select id="af5_8_g" name="af5_8_g" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
                                 <option value="1">1. Fully accessible (meets all standards for physical and informational accessibility)</option>
                                 <option value="2">2. Partially accessible</option>
@@ -765,7 +765,7 @@
                             <input type="text" id="af5_9_e" name="af5_9_e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-1">
-                            <select id="af5_9_g" name="af5_9_g" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                            <select id="af5_9_g" name="af5_9_g" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
                                 <option value="1">1. Fully accessible (meets all standards for physical and informational accessibility)</option>
                                 <option value="2">2. Partially accessible</option>
@@ -791,7 +791,7 @@
                             <input type="text" id="af5_10_e" name="af5_10_e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-1">
-                            <select id="af5_10_g" name="af5_10_g" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 w-full">
+                            <select id="af5_10_g" name="af5_10_g" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
                                 <option value="1">1. Fully accessible (meets all standards for physical and informational accessibility)</option>
                                 <option value="2">2. Partially accessible</option>
@@ -920,7 +920,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div class="col-span-1">
-                    AF7. How is the heating of the accommodation space in the ensured?
+                    AF7.. How is the heating of the accommodation space in the ensured?
                     <small class="block">CHECK ALL THAT APPLY</small>
 
                 </div>
@@ -2719,7 +2719,7 @@
             <p class="mt-6">Please fill in the following table with the actual amount of money spent on each budgetary line in the reporting year</p>
 
 
-            <table class="w-full mt-6" aria-label="FINANCIAL RESOURCES - INSTITUTION'S EXPENDITURES IN THE REPORTING YEAR">
+            <table class="w-full mt-6" aria-label="OBS">
                 <thead class="bg-black text-white">
                     <tr>
                         <th class="w-32 p-2 text-left" scole="col">Indicator code</th>
