--- a/src/pages/local/05_edit_user.html
+++ b/src/pages/local/05_edit_user.html
@@ -47,10 +47,10 @@
 
             <div class="grid grid-cols-3 gap-4 mt-4">
                 <div class="flex flex-col gap-2 justify-center items-start">
-                    <label for="first_name" class="block text-sm font-medium text-gray-900">
+                    <label for="name" class="block text-sm font-medium text-gray-900">
                         <span class="t_first_name">First name</span>
                     </label>
-                    <input type="text" id="first_name"
+                    <input type="text" id="name"
                         class="disabled:bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                         required />
                 </div>
@@ -63,10 +63,10 @@
                         required />
                 </div>
                 <div class="flex flex-col gap-2 justify-center items-start">
-                    <label for="last_name" class="block text-sm font-medium text-gray-900">
+                    <label for="surname" class="block text-sm font-medium text-gray-900">
                         <span class="t_last_name">Last name</span>
                     </label>
-                    <input type="text" id="last_name"
+                    <input type="text" id="surname"
                         class="disabled:bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                         required />
                 </div>
@@ -74,10 +74,10 @@
 
             <div class="grid grid-cols-3 gap-4 mt-4">
                 <div class="flex flex-col gap-2 col-span-1">
-                    <label for="position" class="block text-sm font-medium text-gray-900">
+                    <label for="job_title" class="block text-sm font-medium text-gray-900">
                         <span class="t_position">Position</span>
                     </label>
-                    <input type="text" id="position"
+                    <input type="text" id="job_title"
                         class="disabled:bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                         required />
                 </div>
